; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_depr.c_BN_is_prime.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_depr.c_BN_is_prime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BN_is_prime(i32* %0, i32 %1, void (i32, i32, i8*)* %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca void (i32, i32, i8*)*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store void (i32, i32, i8*)* %2, void (i32, i32, i8*)** %8, align 8
  store i32* %3, i32** %9, align 8
  store i8* %4, i8** %10, align 8
  %12 = load void (i32, i32, i8*)*, void (i32, i32, i8*)** %8, align 8
  %13 = load i8*, i8** %10, align 8
  %14 = call i32 @BN_GENCB_set_old(i32* %11, void (i32, i32, i8*)* %12, i8* %13)
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32*, i32** %9, align 8
  %18 = call i32 @bn_check_prime_int(i32* %15, i32 %16, i32* %17, i32 0, i32* %11)
  ret i32 %18
}

declare dso_local i32 @BN_GENCB_set_old(i32*, void (i32, i32, i8*)*, i8*) #1

declare dso_local i32 @bn_check_prime_int(i32*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
